deploy: d5e2149235384ab9a308356c18eab0d978247a36

--- a/datastructure/bitarray.html
+++ b/datastructure/bitarray.html
@@ -1005,6 +1005,9 @@ The empty bits are filled with <code>0</code>, and the overflowed bits disappear
 <pre><code class="language-rust noplayground">println!(&quot;{}&quot;, bitset.bit_fmt());</code></pre>
 </li>
 </ul>
+<h2 id="license"><a class="header" href="#license">License</a></h2>
+<p>This code is protected under MIT license, holded by 
+Casper <a href="mailto:CasualX@users.noreply.github.com">CasualX@users.noreply.github.com</a>.</p>
 
                     </main>
 
